# docs/swagger.json
@@ -41,7 +41,7 @@
                 "responses": {}
             }
         },
-        "/task": {
+        "/login": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -49,8 +49,28 @@
                 "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "ToDo (Task)"
+                "summary": "User Login",
+                "parameters": [
+                    {
+                        "description": "User credentials",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controller.UserCommand"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/task": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
                 ],
                 "summary": "할일 생성하기",
                 "responses": {}
@@ -64,9 +84,6 @@
                 "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "ToDo (Task)"
-                ],
                 "summary": "아무 조건 없이 모든 ToDo 불러오기",
                 "responses": {}
             }
@@ -79,19 +96,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "User"
-                ],
                 "summary": "유저 생성하기",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Account ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {}
             }
         },
@@ -102,9 +107,6 @@
                 ],
                 "produces": [
                     "application/json"
-                ],
-                "tags": [
-                    "User"
                 ],
                 "summary": "유저 ID 로 조회하기",
                 "responses": {}
@@ -118,11 +120,21 @@
                 "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "User"
-                ],
                 "summary": "아무 조건 없이 모든 User 불러오기",
                 "responses": {}
+            }
+        }
+    },
+    "definitions": {
+        "controller.UserCommand": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "userName": {
+                    "type": "string"
+                }
             }
         }
     }
